# algorithms-in-C

./: CMakeLists.txt  binary_search.c  binary_search.h  graph.c  graph.h  heap.c  heap.h  queue.c  queue.h  set.c  set.h  stack.c  stack.h  tree.c  tree.h
test/: test.c  test.h  test_binary_search.h  test_graph.h  test_heap.h  test_htable.h  test_list.h  test_queue.h  test_stack.h  test_tree.h
